NET-397: work on datum list.